test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/tentative_definition.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[5]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: foo
        None: 
        Int: 
        CExtern: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: foo
        None: 
        Int: 
        None: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: foo
        None: 
        Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CS: 
              CFor: 
                TIdentifier: (null)
                CInitDecl: 
                  CVariableDeclaration: 
                    TIdentifier: i
                    CSingleInit: 
                      CConstant: 
                        CConstInt: 
                          TInt: 0
                        None: 
                      None: 
                    Int: 
                    None: 
                CBinary: 
                  CLessThan: 
                  CVar: 
                    TIdentifier: i
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 5
                    None: 
                  None: 
                CAssignment: 
                  None: 
                  CVar: 
                    TIdentifier: i
                    None: 
                  CBinary: 
                    CAdd: 
                    CVar: 
                      TIdentifier: i
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  None: 
                CExpression: 
                  CAssignment: 
                    None: 
                    CVar: 
                      TIdentifier: foo
                      None: 
                    CBinary: 
                      CAdd: 
                      CVar: 
                        TIdentifier: foo
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 1
                        None: 
                      None: 
                    None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: foo
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: foo
        None: 
        Int: 
        None: 
